Fixed modal component being cut off and adjusted overflow scrolling

--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -11,8 +11,7 @@
 }
 
 .modal-comp {
-    height: 80vh;
-    overflow-y: scroll;
+    height: 90vh;
 }
 
 
